@startuml
enum GameMode {
+ SINGLE = 0
+ PVP = 1
+ PVE = 2
}
class Game {
- hallOfFameStoragePath : str
- helpFilePath : str
- initialTiles : unknown
- rows : int
- columns : int
- tileSize : int
- startGameX : int
- startGameY : int
- basicHp : int
- basicAttack : int
- numberOfRandomMines : int
- timeAfterWhichMinesHide : int
- firstTankSpawnIndex : int
- secondTankSpawnIndex : NoneType
- enemyTanksSpawnIndexes : list
- firstTankControls : dict
- secondTankControls : dict
- enableBonuses : bool
- uniqueBonuses : bool
- bonusSpawningFrequency : int
- maxNumberOfBonuses : int
- tiles : list
- tileColors : unknown
- gameWidth : unknown
- gameHeight : unknown
- helpContent : unknown
- mapTurtle : Turtle
- messageTurtle : Turtle
- minesTurtle : Turtle
- gameRunning : bool
- gamePaused : bool
- roundCounter : int
- gameMode : NoneType
- gameRound : int
- firstTank : NoneType
- secondTank : NoneType
- enemyTanks : list
- occupiedTilesByEnemies : dict
- allTanks : list
- bullets : list
- bonuses : list
- tankCentralization : unknown
- tankSpeedValue : unknown
- controls1 : dict
- controls2 : dict
- laserShootSound : object
- railgunSound : object
- explosionSound : object
- damageSound : object
- gameOverSound : object
- victorySound : object
  + assignSettingsFromFile(settingsFile)
  + getTilePosition(index)
  + getTileIndexFromPoint(point)
  + getNeighbors(index, validationFunction)
  + valid(point)
  + replaceBordersWithTeleport()
  + spawnRandomMines()
  + resetGame(setupWidth, setupHeight, setupXPosition, setupYPosition)
  + startGame()
  + roundOfMovement()
  + checkIfGameOver()
  + endGame(victory, announcement)
  + conditionalExecution(condition, function)
  + tanksCollision(tankChecking, tankCheckingPosition, collisionThreshold)
  + togglePause()
  + toggleHelpMenu()
  + writeText(turtleObject, x, y, message, textAlign, textFont, textColor)
  + drawBoard()
  + drawExplosion(drawingTurtle, x, y, explosionIteration, maxIterations)
  + drawModalMessage(message, subMessage, x, y, modalWidth, modalHeight)
  + activateKeys(keyBindings)
  + deactivateKeys(keys)
  + showStartMenu()
  + showGameModeMenu()
  + setGameMode(mode)
  + showHelpMenu(modalWidth, modalHeight)
  + initHallOfFame(victory)
  + showHallOfFame(modalWidth, modalHeight)
  + loadHallOfFame()
  + saveToHallOfFame(name, score)
}
class Tank {
- game : unknown
- position : vector
- speed : vector
- tankSpeedValue : unknown
- speedRatio : int
- direction : int
- tankColor : unknown
- tankId : unknown
- moveControls : unknown
- stoppingControl : unknown
- shootingControl : unknown
- keysPressed : unknown
- hp : unknown
- maxHp : unknown
- attack : unknown
- defaultAttack : unknown
- tankTurtle : Turtle
- hpTurtle : Turtle
- reloadTurtle : Turtle
- bonusDisplayTurtle : Turtle
- reloadingTime : int
- reloadingRemainingTime : int
- loaded : bool
- destroyed : bool
- deathReason : str
- activeBonuses : unknown
- indestructible : bool
- railgunOn : bool
  + delete()
  + change(tankSpeedDirection, angle)
  + moveTank(wantMove)
  + teleportToMiddleTile()
  + drawHP(hpColor, bgColor)
  + drawReloadBar(reloadColor, bgColor)
  + drawTank()
  + setControls()
  + keyPressHandler(key)
  + tankMovement()
  + shoot()
  + updateReload()
  + debugPrintActualHpSituation(func)
  + takeDamage(amount, reason)
}
enum Tile {
+ NO_TILE = 0
+ ROAD = 1
+ RIVER = 2
+ FOREST = 3
+ INDESTRUCTIBLE_BLOCK = 4
+ DESTRUCTIBLE_BLOCK = 5
+ DESTROYED_DESTRUCTIBLE_BLOCK = 6
+ MINE = 7
+ TELEPORT = 8
}
class File {
  + loadFileAsArray(filename, errorMessage)
  + parseControls(controlString)
  + loadSettingsAndMapFromFile(filePath)
}
class Draw {
  + startDrawing(turtleObject, x, y, fillColor, circuitColor, pensize)
  + endDrawing(turtleObject)
  + drawSquare(turtleObject, x, y, size, squareColor, circuitColor)
  + drawRectangle(turtleObject, x, y, rectangleWidth, rectangleHeight, fillColor, borderColor, startDrawingFromMiddle, borderThickness)
  + drawCircle(turtleObject, x, y, circleSize, circleColor)
  + drawHearth(turtleObject, x, y, size, fillColor, circuitColor)
  + drawStar(turtleObject, x, y, size, fillColor, circuitColor)
  + drawSingleChevron(turtleObject, x, y, size, fillColor, circuitColor)
  + drawChevronPattern(turtleObject, x, y, size, spaceBetweenChevrons, numberOfChevrons, fillColor, circuitColor)
  + drawSkull(turtleObject, x, y, squareSize, skullColor, eyesColor)
  + drawShield(turtleObject, x, y, squareSize, outerShieldColor, innerShieldColor)
  + drawSandglass(turtleObject, x, y, squareSize, glassColor, sandColor)
  + drawLightning(turtleObject, x, y, t, fillColor, circuitColor)
  + drawTriangle(turtleObject, x, y, sideSize, trianglePointedUp, fillColor, circuitColor)
  + drawPortal(turtleObject, x, y, portalSize, numberOfLayers, portalColor, backgroundColor)
}
class Bullet {
- position : vector
- direction : unknown
- bulletSpeed : unknown
- shooter : unknown
- bulletTurtle : Turtle
  + moveBullet()
  + checkBulletHit(game, bullet)
  + processBulletsMovementsAndCollisions(game)
}
enum BonusType {
+ HEALTH = 1
+ RELOAD = 2
+ REGENERATION = 3
+ SHIELD = 4
+ ATTACK = 5
+ SPEED = 6
+ RAILGUN = 7
+ ALL = 8
}
class Bonus {
- game : unknown
- bonusType : unknown
- position : unknown
- bonusTurtle : Turtle
  + drawBonus()
  + spawnBonus(game)
  + tankIsOnBonus(tank, bonus, tileSize)
  + tankBonusOverlap(tankParameters, bonusParameters)
  + activateBonus(tank, bonusType, amountTime)
  + updateActiveBonuses(tank)
  + deactivateBonus(tank, bonusType)
  + displayActiveBonuses(tank)
}
class AITank {
- target : unknown
- path : list
- stuckRounds : int
- hpBeforeStuck : unknown
  + delete()
  + decideTarget()
  + isCollidingWithOtherTank(nextTiles)
  + isValidPointForBot(point)
  + isValidIndexForBot(index)
  + findPath(startIndex, endIndex)
  + tryAppointNewPath()
  + simpleDirectionToBeCloserToTarget()
  + updateDirectionPath()
  + getTilesInRange(point, tankRange)
  + getStuckTankOut()
  + moveTank(wantMove)
  + decideToShoot()
  + hasLineOfSight(targetPosition)
}
Game --> Tank : manages
Game --> AITank : manages
Game --> Bonus : manages
Game --> Bullet : manages
Game --> Tile : uses
Game --> File : loads
Game --> Draw : uses
Game --> GameMode : has
Tank <|-- AITank : inherits
Bonus --> BonusType : has
@enduml